[package]
name = "serialcomm"
description = "service accepting serial communication and forwarding to collector"
authors = ["Michael Palmer <michaelpalmer53@gmail.com>"]
version = "0.1.0"
edition = "2018"
readme  = "README.md"
repository = "https://github.com/Isolated-/rust-serialcomm"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]